# geev

./: .env.example  .gitignore  PR_MESSAGE.md  README.md  auth.ts  middleware.ts  package-lock.json  package.json  proxy.ts  vitest.config.ts
contracts/geev-core/: Cargo.toml
contracts/geev-core/src/: admin.rs  giveaway.rs  lib.rs  mutual_aid.rs  test.rs  types.rs
contracts/geev-core/test_snapshots/: enter_once_before_end_increments_participant_count.1.json  reject_duplicate_entries.1.json  reject_entry_after_end_time.1.json
contracts/geev-core/test_snapshots/test/: test_add_token_to_whitelist.1.json  test_admin_withdraw_fails_non_admin.1.json  test_admin_withdraw_full_balance.1.json  test_admin_withdraw_success.1.json  test_check_admin_helper.1.json  test_create_giveaway_with_whitelisted_token.1.json  test_distribute_prize.1.json  test_distribute_prize_reentrancy_protection.1.json  test_distribute_prize_wrong_status_fails.1.json  test_donation_emits_contributor_tracking_event.1.json  test_donation_flow.1.json  test_donation_reaches_goal.1.json  test_donation_to_fully_funded_request_fails.1.json  test_donation_to_nonexistent_request_fails.1.json  test_donation_with_invalid_amount_fails.1.json  test_duplicate_username_rejected.1.json  test_enter_late_fails.1.json  test_giveaway_flow.1.json  test_init_twice_fails.1.json  test_pick_winner_early_fails.1.json  test_refund_flow.1.json  test_resolve_username_returns_owner.1.json  test_set_and_get_profile.1.json  test_toggle_request_verification.1.json  test_withdraw_fees.1.json  (+1 more)
contracts/geev-core/tests/: enter_giveaway.rs
(+191 files in other folders)
